--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "path=\"C:/Users/Jordi/Desktop\"\n",
+    "path=\"\"\n",
     "setwd(path)\n",
     "mydata = read.csv(\"data.csv\", sep=\";\")\n",
     "mydata = subset(mydata, select = -c(time))\n",
